add OpenApiSwagger and change names tables

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,10 +9,11 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 springdoc.api-docs.enabled=true
 
 # Swagger
-springdoc.api-docs.path=/swagger/api-docs
-springdoc.swagger-ui.enabled=true
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.packages-to-scan=com.seph_worker.worker.controller
 springdoc.paths-to-match=/**
+
 
 
 
